<resources>
    <string name="app_name">Vibra</string>
    <string name="title_measure">Measure</string>
    <string name="title_history">History</string>
    <string name="title_liveview">Live View</string>
    <string name="title_collect_data">Collect Data</string>
    <string name="filter_list">Filter List</string>
    <string name="content_description_filter_list">Filter List</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">Settings</string>
    <string name="share_data">Share data</string>
    <string name="share">Share</string>
    <string name="choose_data">Choose data (as CSV)</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="content_description_share">Share</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="content_description_timer_icon">Timer icon</string>
    <string name="content_description_more_time_icon">Clock icon with plus sign</string>
    <string name="content_description_calendar">Calendar icon</string>
    <string name="content_description_more">More menu icon</string>
    <string name="duration">Duration</string>
    <string name="countdown">Countdown</string>
    <string name="minutes_abbreviation">m</string>
    <string name="seconds_abbreviation">s</string>
    <string name="empty_timer_input">00</string>
    <string name="dialog_save_or_discard">Save measurement?</string>
    <string name="back_press_will_discard">Pressing Back will discard.</string>
    <string name="delete_measurement">Delete Measurement?</string>
    <string name="delete_measurement_info">This action results in <b>permanent</b> deletion.</string>
    <string name="rename_measurement">Rename measurement</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="resume">Resume</string>
    <string name="title">Title</string>
    <string name="optional_title">Generated if left blank</string>
    <string name="data_collection">Data Collection</string>
    <string name="fundamental_frequency">Fundamental Frequency</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="frequency">Frequency:</string>

    <string name="raw_data_graph">Accelerometer</string>
    <string name="raw_gyro_data">Gyroscope Data</string>
    <string name="total_acceleration">Total Acceleration</string>
    <string name="amplitude_spectrum">Amplitude Spectrum</string>
    <string name="power_spectrum_graph">Power Spectrum</string>
    <string name="sampling_frequency">Sampling Frequency (Hz)</string>

    <string name="sampling_frequency_info">Actual frequency may vary depending on the sensor\'s capabilities.</string>
    <string name="input_a_number">Input a number</string>
    <string name="show_graphs">Graphs to be Shown</string>
    <string name="show_graphs_info">Select which graphs should be shown when viewing measurement data.</string>
    <string name="prefs_total_acceleration_info">Adjust parameters related to calculating the total acceleration.</string>
    <string name="sign_maxima_thresh_title">Maxima Threshold for Finding Sign</string>
    <string name="sign_maxima_thresh_summary">Threshold for finding indices for the maxima in the acceleration vector.</string>
    <string name="tot_acc_peak_lower_thresh_title">Lower Peak Threshold</string>
    <string name="tot_acc_peak_upper_thresh_title">Upper Peak Threshold</string>
    <string name="tot_acc_peak_lower_thresh_summary">Lower threshold for finding peaks, value in m/s^2.</string>
    <string name="tot_acc_peak_upper_thresh_summary">Upper threshold for finding peaks, value in m/s^2.</string>
    <string name="prefs_amplitude_spectrum_info">Adjust parameters related to the amplitude spectrum.</string>
    <string name="amp_spec_peak_lower_thresh_summary">Lower threshold for finding amplitude peaks.</string>
    <string name="amp_spec_peak_upper_thresh_summary">Upper threshold for finding amplitude peaks.</string>

    <string name="reset_preferences">Reset Settings</string>
    <string name="reset_preferences_summary">Reset settings to default values.</string>

    <string name="measurement_settings">Data Collection</string>
    <string name="measurement_details">Measurement Details</string>
    <string name="signal_processing">Signal Processing</string>

    <string name="prefs_sampling_frequency">SHARED_PREFS_SAMPLING_FREQUENCY</string>
    <string name="prefs_show_graphs_key">SHARED_PREFS_GRAPHS</string>
    <string name="prefs_measure">SHARED_PREFS_MEASURE</string>
    <string name="prefs_measure_duration_minutes">SHARED_PREFS_DURATION_MINUTES</string>
    <string name="prefs_measure_duration_seconds">SHARED_PREFS_DURATION_SECONDS</string>
    <string name="prefs_measure_countdown_seconds">SHARED_PREFS_DURATION_COUNTDOWN</string>

    <string name="prefs_share">SHARED_PREFS_SHARE</string>
    <string name="prefs_share_acc_raw_data">SHARED_PREFS_SHARE_ACC_RAW_DATA</string>
    <string name="prefs_share_gyro_raw_data">SHARED_PREFS_SHARE_GYRO_RAW_DATA</string>
    <string name="prefs_share_total_acceleration">SHARED_PREFS_SHARE_TOTAL_ACCELERATION</string>
    <string name="prefs_share_amplitude_spectrum">SHARED_PREFS_SHARE_AMPLITUDE_SPECTRUM</string>
    <string name="prefs_share_power_spectrum">SHARED_PREFS_SHARE_POWER_SPECTRUM</string>

    <string name="prefs_total_acceleration">SHARED_PREFS_TOTAL_ACCELERATION</string>
    <string name="prefs_tot_acc_maxima_thresh_in_find_sign">SHARED_PREFS_SIGN_FIND_MAXIMA_THRESH</string>
    <string name="prefs_tot_acc_peak_lower_thresh">SHARED_PREFS_TOT_ACC_PEAK_LOWER_THRESH</string>
    <string name="prefs_tot_acc_peak_upper_thresh">SHARED_PREFS_TOT_ACC_PEAK_UPPER_THRESH</string>

    <string name="prefs_amplitude_spectrum">SHARED_PREFS_AMPLITUDE_SPECTRUM</string>
    <string name="prefs_amp_spec_peak_upper_thresh">SHARED_PREFS_AMP_SPEC_PEAK_UPPER_THRESH</string>
    <string name="prefs_amp_spec_peak_lower_thresh">SHARED_PREFS_AMP_SPEC_PEAK_LOWER_THRESH</string>

    <string name="prefs_reset_preferences">SHARED_PREFS_RESET_PREFERENCES</string>

    <string-array name="prefs_show_graphs_values">
        <item>RAW_ACC_DATA</item>
        <item>TOTAL_ACCELERATION</item>
        <item>AMPLITUDE_SPECTRUM</item>
        <item>POWER_SPECTRUM</item>
    </string-array>
    <string-array name="prefs_show_graphs">
        <item>@string/raw_data_graph</item>
        <item>@string/total_acceleration</item>
        <item>@string/amplitude_spectrum</item>
        <item>@string/power_spectrum_graph</item>
    </string-array>
    <string-array name="prefs_show_graphs_default">
        <item>true</item>
        <item>true</item>
        <item>true</item>
        <item>true</item>
    </string-array>

</resources>