<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_measure">

    <fragment
        android:id="@+id/navigation_measure"
        android:name="com.krisgun.vibra.ui.measure.MeasureFragment"
        android:label="@string/title_measure"
        tools:layout="@layout/fragment_measure" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.krisgun.vibra.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_liveview"
        android:name="com.krisgun.vibra.ui.liveview.LiveViewFragment"
        android:label="@string/title_liveview"
        tools:layout="@layout/fragment_liveview" />
</navigation>