<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="dialogFragment"
            type="com.krisgun.vibra.ui.details.dialogs.ShareMeasurementDialog" />
        <variable
            name="detailsMenuVM"
            type="com.krisgun.vibra.ui.details.dialogs.DetailsMenuViewModel" />
        <import type="com.krisgun.vibra.ui.details.dialogs.DetailsMenuViewModel.DataNames" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialog_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/share_data"
                    tools:text="Share data" />

                <TextView
                    android:id="@+id/choose_data_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    android:text="@string/choose_data"
                    tools:text="Choose data" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/raw_data_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/raw_data_graph"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/choose_data_text"
                    android:checked="@={detailsMenuVM.checkBoxBooleans[DataNames.RAW_DATA.ordinal]}"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/total_acceleration_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/raw_data_check_box"
                    android:text="@string/total_acceleration"
                    android:checked="@={detailsMenuVM.checkBoxBooleans[DataNames.TOTAL_ACCELERATION.ordinal]}"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/amplitude_spectrum_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_acceleration_check_box"
                    android:text="@string/amplitude_spectrum"
                    android:checked="@={detailsMenuVM.checkBoxBooleans[DataNames.AMPLITUDE_SPECTRUM.ordinal]}"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/power_spectrum_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/power_spectrum_graph"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amplitude_spectrum_check_box"
                    android:checked="@={detailsMenuVM.checkBoxBooleans[DataNames.POWER_SPECTRUM.ordinal]}"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/share_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:onClick="@{() -> dialogFragment.onShare()}"
                    android:enabled="@{detailsMenuVM.isShareButtonEnabled()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{() -> dialogFragment.onCancel()}"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/share_button"
                    app:layout_constraintTop_toBottomOf="@+id/power_spectrum_check_box" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>