<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.krisgun.vibra.util.Converter" />
        <variable
            name="measurement"
            type="com.krisgun.vibra.data.Measurement" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:background="?attr/selectableItemBackground">


        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Measurement 1"
            android:text="@{measurement.title}"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_title"
            app:srcCompat="@drawable/ic_baseline_calendar_today_24"
            app:tint="@color/material_on_surface_emphasis_high_type"
            android:contentDescription="@string/content_description_calendar" />

        <TextView
            android:id="@+id/list_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/list_item_title"
            tools:text="02 mars 2021 04:45"
            android:text="@{measurement.date.toLocaleString()}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ic_baseline_timer_24"
            app:tint="@color/material_on_surface_emphasis_high_type"
            android:contentDescription="@string/content_description_timer_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="@{Converter.durationToString(measurement.duration_seconds)}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/material_on_surface_emphasis_medium"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/list_item_date"
            tools:hint="00:15" />

        <ImageView
            android:id="@+id/list_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/content_description_more"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_more_vert_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>